# shuriken

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  COMPLIANCE_INDEX.md  COMPLIANCE_SUMMARY.md  Cargo.toml  DATAFLOW_TRACE.md  Dockerfile.caldavtester  GITHUB_ISSUES.md  IMPLEMENTATION_PATTERNS.md  ISSUES_QUICK_REFERENCE.md  ISSUES_README.md  MAINTAINING_RFC_COMPLIANCE_DOCS.md  NEXT_STEPS.md  README.md  README_RFC_COMPLIANCE.md  RFC_COMPLIANCE_EXECUTIVE_SUMMARY.md  RFC_COMPLIANCE_IMPLEMENTATION_GUIDE.md  RFC_COMPLIANCE_REVIEW.md  RFC_COMPLIANCE_SECOND_PASS.md  SCHEMA_OPTIMIZATION_SUMMARY.md  SCHEMA_REVIEW.md  SUMMARY.md  TODO.md  biome.json  caldavtestconfig.xml  caldavtester_seed.sql  casbin.conf  clippy.toml  config.basic_auth.toml  create_github_issues.sh  cspell.json  deno.json  diesel.toml  docker-compose.caldavtester.yml  docker-compose.db.yaml  docker-compose.yaml  (+7 more)
.cargo/: config.toml
crates/shuriken-app/: Cargo.toml
crates/shuriken-app/src/: db_handler.rs  error.rs  lib.rs  main.rs
crates/shuriken-app/src/app/api/: mod.rs
crates/shuriken-app/src/app/api/app_specific/: auth.rs  healthcheck.rs  mod.rs  users.rs  whoami.rs
crates/shuriken-app/src/app/api/caldav/: mod.rs
crates/shuriken-app/src/app/api/carddav/: mod.rs
crates/shuriken-app/src/app/api/dav/: mod.rs  util.rs
crates/shuriken-app/src/config/: mod.rs  tests.rs
crates/shuriken-app/src/middleware/: auth.rs  dav_path_middleware.rs  mod.rs  path_parser.rs
crates/shuriken-caldavtester/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TEST TODO.md  docker-compose.yml
crates/shuriken-caldavtester/examples/: run_llm.rs  run_selected.rs  run_tests.rs
crates/shuriken-caldavtester/scripts/: setup_local_env.sh
crates/shuriken-caldavtester/src/: config.rs  context.rs  error.rs  lib.rs  runner.rs  server.rs  verification.rs  xml.rs
crates/shuriken-caldavtester/src/verification/: mod.rs  multistatus.rs  multistatus_items.rs  prepost.rs  propfind.rs  xml_match.rs
crates/shuriken-caldavtester/test-suite/: README.md
crates/shuriken-caldavtester/tests/: integration_test.rs
crates/shuriken-core/: Cargo.toml  config.toml
crates/shuriken-core/src/: config.rs  constants.rs  error.rs  lib.rs  types.rs
crates/shuriken-core/src/error/: mod.rs
crates/shuriken-core/src/util/: slug.rs
crates/shuriken-db/: Cargo.toml  diesel.toml
crates/shuriken-db/migrations/2026-01-22-024228-0000_create_subject/: down.sql
crates/shuriken-db/migrations/2026-01-22-044819-0000_casbin/: up.sql
crates/shuriken-db/migrations/2026-01-23-011644-0000_unique_users/: down.sql
crates/shuriken-db/migrations/2026-01-23-011644-0001_groups_name_and_aliases/: down.sql  up.sql
crates/shuriken-db/migrations/2026-01-23-012500-0002_add_memberships_table/: down.sql  up.sql
crates/shuriken-db/migrations/2026-01-23-020000-0003_dav_storage/: down.sql  up.sql
crates/shuriken-db/migrations/2026-01-25-223509-0000_schema_optimization_phase_6_7/: down.sql
crates/shuriken-db/migrations/2026-01-26-000000-0000_add_dav_property_group/: down.sql  up.sql
crates/shuriken-db/migrations/2026-01-26-000000-0001_add_slug_fields/: up.sql
crates/shuriken-db/migrations/2026-01-29-185256-0000_simplify_index_tables/: down.sql
crates/shuriken-db/migrations/2026-01-30-193311-0000_add_array_columns_to_dav_property/: down.sql  up.sql
crates/shuriken-db/migrations/2026-01-31-120000-0000_casefold_collations/: down.sql  up.sql
crates/shuriken-db/migrations/2026-02-01-162943-0000_add_auth_credential_column/: down.sql  up.sql
crates/shuriken-db/migrations/2026-03-18-000000-0000_fix_supported_components_default/: down.sql  up.sql
crates/shuriken-db/src/: dav_types.rs  error.rs  lib.rs
crates/shuriken-db/src/component/db/: schema.rs
crates/shuriken-db/src/db/: caldav_keys.rs  carddav_keys.rs  connection.rs  enums.rs  mod.rs  pg_types.rs  schema.rs  transaction.rs
crates/shuriken-db/src/db/map/: caldav.rs  carddav.rs  mod.rs
crates/shuriken-db/src/db/query/: mod.rs  report_property.rs  text_match.rs
crates/shuriken-db/src/model/caldav/: cal_index.rs
crates/shuriken-db/src/model/carddav/: card_index.rs  mod.rs
crates/shuriken-db/src/model/dav/: collection.rs  component.rs  entity.rs  instance.rs  parameter.rs  property.rs  schedule_message.rs  timezone.rs  tombstone.rs
crates/shuriken-db/src/model/group/: group_name.rs  mod.rs
crates/shuriken-db/src/model/principal/: mod.rs
crates/shuriken-db/src/model/user/: authuser.rs  membership.rs  mod.rs
crates/shuriken-rfc/: Cargo.toml
crates/shuriken-rfc/examples/: need_privileges_example.rs
crates/shuriken-rfc/src/: error.rs  lib.rs  recurrence.rs
crates/shuriken-rfc/src/remote/ics/: mod.rs
crates/shuriken-rfc/src/rfc/: filter.rs  mod.rs
crates/shuriken-rfc/src/rfc/dav/: mod.rs
crates/shuriken-rfc/src/rfc/ical/: mod.rs
crates/shuriken-rfc/src/rfc/validation/: filter.rs  mod.rs
crates/shuriken-rfc/src/rfc/vcard/: mod.rs
crates/shuriken-rfc/tests/rrule_cases_data/: mod.rs
crates/shuriken-service/: Cargo.toml
crates/shuriken-service/src/: error.rs  lib.rs
crates/shuriken-service/src/auth/: acl.rs  action.rs  authenticate.rs  authorize.rs  casbin.rs  casbin_model.conf  casbin_test.rs  depot.rs  mod.rs  password.rs  permission.rs  resource.rs  service.rs  subject.rs
crates/shuriken-service/src/caldav/: mod.rs  recurrence.rs
crates/shuriken-service/src/caldav/service/: object.rs  report.rs
crates/shuriken-service/src/carddav/service/: mod.rs  object.rs  report.rs
crates/shuriken-service/src/dav/service/: collection.rs  mod.rs
crates/shuriken-service/tests/rrule_cases_data/: mod.rs
crates/shuriken-test/: Cargo.toml
crates/shuriken-test/src/: lib.rs
crates/shuriken-test/tests/: TESTING.md  unit_path_parser.rs
crates/shuriken-test/tests/integration/: acl_pseudo_principals.rs  authorization.rs  collection.rs  copy_move.rs  delete.rs  example_test.rs  get_head.rs  helpers.rs  mkcol.rs  mod.rs  options.rs  propfind.rs  proppatch.rs  put.rs  report.rs  rrule_integration.rs  slug_resolver.rs  uid_validation.rs
src/: lib.rs  (+6 more)
(+1369 files in other folders)
