[package]
name = "shuriken"
version = "0.1.0"
edition = "2024"

[lib]
name = "shuriken"
path = "src/lib.rs"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

cognitive_complexity = "warn"
allow_attributes = "warn"
decimal_literal_representation = "warn"
else_if_without_else = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
non_zero_suggestions = "warn"
return_and_then = "warn"
self_named_module_files = "warn"
unwrap_used = "warn"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
config = { version = "0.15.19", features = ["toml", "json", "yaml"] }
diesel = { version = "2.3.5", features = [
    "postgres",
    "chrono",
    "network-address",
    "uuid",
] }
diesel-async-adapter = { version = "0.1.0", features = [
    "postgres",
], git = "https://github.com/jthoward64/diesel-async-adapter.git" }
diesel-async = { version = "0.7.4", features = ["postgres", "tokio", "bb8"] }
diesel-guard = "0.5.0"
ipnetwork = "0.21.1"
pest = "2.8.5"
quick-xml = { version = "0.39.0", features = ["async-tokio"] }
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "rustls",
    "gzip",
] }
salvo = { version = "0.88.1", features = [
    "http2-cleartext",
    "anyhow",
    "basic-auth",
    "caching-headers",
    "logging",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "time",
    "fs",
    "signal",
    "io-util",
    "sync",
] }
tracing = { version = "0.1.44", features = ["valuable"] }
uuid = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
casbin = "2.19.1"
tracing-subscriber = "0.3.22"
