[package]
name = "shuriken-caldavtester"
version = "0.1.0"
edition = "2021"

[dependencies]
# Test infrastructure
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# HTTP client for making requests
reqwest = { workspace = true, features = ["cookies"] }
http = "1.1"
salvo = { workspace = true, features = ["test"] }

# XML parsing
quick-xml = { workspace = true, features = ["serialize"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Regex (lightweight, no std dependency)
regex-lite = "0.1"
base64 = "0.22"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Other workspace dependencies
shuriken-core = { path = "../shuriken-core" }
shuriken-db = { path = "../shuriken-db" }
shuriken-app = { path = "../shuriken-app" }
shuriken-service = { path = "../shuriken-service" }

[dev-dependencies]
test-log = { workspace = true }
