[package]
name = "shuriken-rfc"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
shuriken-core = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
const-str = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
icu = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true }
reqwest-tracing = { workspace = true }
rrule = { workspace = true }
salvo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
